--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
